// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionColumn snapshots should render SectionColumn 1`] = `
<DocumentFragment>
  <div
    class="css-q0izro SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons & labels 1`] = `
<DocumentFragment>
  <div
    class="css-q0izro SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-q0izro SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
    </div>
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      >
        <div
          class="css-q0izro ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-q0izro Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="Close"
            height="14"
            name="Close"
            width="14"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SectionColumn snapshots should render with buttons 1`] = `
<DocumentFragment>
  <div
    class="css-q0izro SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="SectionColumn__labels SectionColumn__labels--light"
      style="width: calc(100% - 24px - 0px - 8px);"
    />
    <div
      class="SectionColumn__wrapper SectionColumn__wrapper--light"
    >
      <div
        class="SectionColumn__content SectionColumn__content--light"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        children
      </div>
      <div
        class="SectionColumn__buttons SectionColumn__buttons--light"
      >
        <div
          class="css-q0izro ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
        >
          <div
            class="css-q0izro Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="Close"
            height="14"
            name="Close"
            width="14"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
